@@ -365,6 +365,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   in which items are displayed 'on_privacy' 'public' then 'secret', and have 'secret/public/secret' items
 - When an item is visible by advisers but advice was never giveable (especially when workflow is not linear or configuration is wrong
   and items are visible by advisers before advice is giveable), adapted method on the item to specify that advice was never giveable
+- Removed Meeting.i18n and MeetingItem.i18n methods, use view.translate in Pod templates and zope.i18n.translate elsewhere
 
 3.3 (2015-02-27)
 ----------------
